--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/wwwroot/css/site.css
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/wwwroot/css/site.css
@@ -94,7 +94,8 @@ a, .btn-link {
 }
 
 .tb_smaller {
-    width: 13%;
+    width: 125px;
+    height: 32px;
 }
 
 .nounderline {
@@ -173,8 +174,6 @@ table {
     text-align: center;
     font-weight: bold;
     width: 100%;
-    overflow: hidden;
-    border-radius: 12px;
 }
 
 th {
@@ -211,3 +210,36 @@ tr{
     top: 50%;
     border-radius: 12px;
 }
+
+#imgcorner {
+    position: relative;
+}
+
+.img_topright {
+    width: 300px;
+    height: 150px;
+    position: absolute;
+    top: -50px;
+    border-radius: 12px;
+    right: 0;
+}
+
+.img_topright2 {
+    width: 150px;
+    height: 150px;
+    position: absolute;
+    top: -50px;
+    border-radius: 12px;
+    right: 320px;
+}
+
+.tableFixHead {
+    border-radius: 12px;
+    overflow: auto;
+    height: 300px;
+}
+
+    .tableFixHead thead th {
+        position: sticky;
+        top: 0;
+    }
