--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/Stand/ShowStandComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/Stand/ShowStandComponent.razor
@@ -2,6 +2,7 @@
 @page "/showstand/{sucessStr}/{sucessMessage}"
 @page "/showstand/{erroStr}"
 @using SourceCode.WebClasses;
+@using SourceCode.Stand;
 @inject NavigationManager navigationManager
 
 <div>
@@ -17,20 +18,22 @@
 	}
 	<div class="tableFixHead">
 		<table>
-			<tbody>
+			<thead>
 				<tr>
 					<th>Produto</th>
 					<th>Preço</th>
 					<th>Stock</th>
 					<th>Quantidade</th>
 				</tr>
+			</thead>
+			<tbody>
 				@foreach (var produto in tabelContent.Content)
 				{
-					<tr class=@tabelContent.Cssclasses[produto.Key]>
-						<td> @produto.Key</td>
-						<td> @produto.Value.Item1</td>
-						<td> @produto.Value.Item2</td>
-						<td> <input type="text" class="tb tb_smaller" id="quantidade" name="quantidade" placeholder="Quantidade" @oninput="(args) => RecalculaPrecoTotal(args,produto.Key)"/></td>
+					<tr class=@tabelContent.Cssclasses[produto.Item1]>
+						<td> @produto.Item2.IdProduto</td>
+						<td> @produto.Item2.Preco</td>
+						<td> @produto.Item2.Stock</td>
+						<td> <input type="text" class="tb tb_smaller" id="quantidade" name="quantidade" placeholder="Quantidade" @oninput="(args) => RecalculaPrecoTotal(args,produto.Item1)"/></td>
 					</tr>
 				}
 			</tbody>
@@ -60,7 +63,7 @@
 	private int erro;
 	private int count = 0;
 	private int count2 = 0;
-	private Table<string> tabelContent;
+	private Table<Produto> tabelContent;
 	private bool sucess;
 	private float precoTotal = 0;
 	private Dictionary<int, string> codigosErro = new Dictionary<int, string>();
@@ -73,19 +76,20 @@
 		if (!bool.TryParse(sucessStr, out sucess))
 			sucess = false ;
 	}
-	protected override void OnInitialized()
+	protected override async void OnInitialized()
 	{
 		stand = this;
-		List<(int, string,int)> conteudo = new List<(int, string,int)>();
-		conteudo.Add((1, "abc",3));
-		conteudo.Add((2, "def",3));
-		conteudo.Add((3, "ghi",3));
-		conteudo.Add((4, "jkl",3));
-		conteudo.Add((5, "jkl",3));
-		conteudo.Add((6, "jkl",3));
-		conteudo.Add((7, "jkl",3));
-		this.tabelContent = new Table<string>(conteudo);
-		conteudo.ForEach(t => quantidades[t.Item1] = 0);
+		List<Produto> conteudo = new List<Produto>();
+		conteudo.Add(new Produto(1, "bra",1,2,3,4f,true));
+		conteudo.Add(new Produto(2, "por",1,2,3,4f,true));
+		conteudo.Add(new Produto(3, "li4",1,2,3,4f,true));
+		conteudo.Add(new Produto(4, "abc",1,2,3,4f,true));
+		conteudo.Add(new Produto(5, "def",1,2,3,4f,true));
+		conteudo.Add(new Produto(6, "ghi",1,2,3,4f,true));
+		conteudo.Add(new Produto(7, "jkl",1,2,3,4f,true));
+		this.tabelContent = new Table<Produto>(conteudo);
+		for(int i = 0; i < conteudo.Count; i++)
+			quantidades[i] = 0;
 		codigosErro[1] = "Nenhum stand selecionado";
 		codigosErro[2] = "Compra cancelada";
 		codigosErro[3] = "Negociação cancelada";
@@ -113,7 +117,7 @@
 			count2++;
 			quantidades[key] = 0;
 		}
-		precoTotal = quantidades.Keys.ToList().Select(id => tabelContent.Content[id].Item2 * quantidades[id]).Sum();
+		precoTotal = quantidades.Keys.ToList().Select(id => tabelContent.Content[id].Item2.Preco * quantidades[id]).Sum();
 	}
 	public void CompraRapida()
 	{
