--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/Login/LoginComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/Login/LoginComponent.razor
@@ -1,6 +1,9 @@
 ﻿@page "/login"
 @inject NavigationManager navigationManager
 @using SourceCode.WebClasses;
+@using SourceCode.Utilizadores;
+@using SourceCode;
+@using System.Text.Json;
 
 <PageTitle>Página de autenticação</PageTitle>
 
@@ -43,6 +46,7 @@
 		login = this;
 		this.codigosErro[1] = "Dados de acesso incorretos";
 		this.codigosErro[2] = "Campos incompletos";
+		this.codigosErro[3] = "";
 	}
 	public static LoginComponent GetInstace()
 	{
@@ -55,23 +59,43 @@
 	}
 	private void verificaCredencais()
 	{
-		bool existe = true;
 		if(email.Length == 0 || password.Length == 0)
 		{
 			this.erro = 2;
 		}
 		else 
 		{
-			// método a perguntar à base de dados se existe
-			if(existe)
+
+			Utilizador user = new Cliente("abc", "abc", "abc", DateTime.Now, DateTime.Now);
+			NavMenu.GetInstance().lista = NavBar.GetInstance().GetMenu((int)NavBar.menusNomes.Cliente);
+			NavMenu.GetInstance().show = true;
+			NavMenu.GetInstance().Refresh();
+			string userStr = JsonSerializer.Serialize(user);
+			navigationManager.NavigateTo($"/user/{email}");
+			/*
+			SistemaFeiras sistemaFeiras = new SistemaFeiras();
+			try
 			{
-				NavMenu.GetInstance().lista = NavBar.GetInstance().GetMenu((int)NavBar.menusNomes.Cliente);
-				NavMenu.GetInstance().show = true;
-				NavMenu.GetInstance().Refresh();
-				navigationManager.NavigateTo("user");
+				int existe = sistemaFeiras.Login(email, password);
+				switch (existe)
+				{
+					case 0:
+						NavMenu.GetInstance().lista = NavBar.GetInstance().GetMenu((int)NavBar.menusNomes.Cliente);
+						break;
+					case 1:
+						NavMenu.GetInstance().lista = NavBar.GetInstance().GetMenu((int)NavBar.menusNomes.Admin);
+						break;
+					case 2:
+						NavMenu.GetInstance().lista = NavBar.GetInstance().GetMenu((int)NavBar.menusNomes.Feirante);
+						break;
+				}
 			}
-			else
-				this.erro = 1;
+			catch (Exception e)
+			{
+				this.erro = 3;
+				codigosErro[3] = e.Message;
+			}
+			// método a perguntar à base de dados se existe*/
 		}
 	}
 }
