--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/Login/LoginComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/Login/LoginComponent.razor
@@ -66,7 +66,7 @@
 		else 
 		{
 
-			Utilizador user = new Cliente("abc", "abc", "abc", DateTime.Now, DateTime.Now);
+			Utilizador user = new Cliente("abc", "abc", "abc", DateTime.Now, DateTime.Now, new List<string>());
 			NavMenu.GetInstance().lista = NavBar.GetInstance().GetMenu((int)NavBar.menusNomes.Cliente);
 			NavMenu.GetInstance().show = true;
 			NavMenu.GetInstance().Refresh();
