--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Shared/NavMenu.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Shared/NavMenu.razor
@@ -1,4 +1,5 @@
 ﻿@using SourceCode.WebClasses;
+@using FeirasEspinhoBlazorApp.Pages.Login;
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
@@ -57,6 +58,8 @@
     public void Logout()
     {
         show = false;
+        LoginComponent loginComponent = LoginComponent.GetInstace();
+        loginComponent.Logout();
         lista = NavBar.GetInstance().GetMenu((int)NavBar.menusNomes.Login);
     }
 }
