--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLogin/CreateACCComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLogin/CreateACCComponent.razor
@@ -1,6 +1,6 @@
 ﻿@page "/createacc"
-@using FeirasEspinhoBlazorApp.SourceCode.Utilizadores;
-@using FeirasEspinhoBlazorApp.SourceCode;
+@using SourceCode.Utilizadores;
+@using SourceCode;
 @inject NavigationManager navigationManager;
 
 <PageTitle>Página de criação de conta</PageTitle>
