--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/FastPurchaseComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesStand/FastPurchaseComponent.razor
@@ -1,6 +1,7 @@
 ﻿@page "/fastpurchase"
 @inject NavigationManager navigation;
 
+<PageTitle>Compra rápida</PageTitle>
 <h3>Compra rápida</h3>
 <br />
 
