--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Shared/NavMenu.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿@using SourceCode.WebClasses;
-@using FeirasEspinhoBlazorApp.Pages.Login;
+@using FeirasEspinhoBlazorApp.Pages.PagesLogin;
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
@@ -57,6 +57,7 @@
     }
     public void Logout()
     {
+        NavBar.GetInstance().LogoutCL();
         show = false;
         LoginComponent loginComponent = LoginComponent.GetInstace();
         loginComponent.Logout();
