--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Shared/WarningComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Shared/WarningComponent.razor
@@ -1,8 +1,8 @@
 ﻿@page "/warning"
-@using Pages.Login;
-@using Pages.Client;
-@using Pages.Stand;
-@using Pages.Leilao;
+@using Pages.PagesLogin;
+@using Pages.PagesFeira;
+@using Pages.PagesStand;
+@using Pages.PagesLeilao;
 
 @if(sucess)
 {
