--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesFeira/ShowFeiraStandsComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesFeira/ShowFeiraStandsComponent.razor
@@ -3,7 +3,9 @@
 @using SourceCode.Stands;
 @using SourceCode.Feiras;
 @using System.Text.Json;
-@using FeirasEspinhoBlazorApp.Pages.Stand;
+@using FeirasEspinhoBlazorApp.Pages.PagesStand;
+@using FeirasEspinhoBlazorApp.Pages.PagesLeilao;
+@inject NavigationManager navigationManager
 
 <PageTitle>Stands</PageTitle>
 
@@ -16,6 +18,10 @@
 	else if (showStand)
 	{
 		<ShowStandComponent idStand="@idStand"/>
+	}
+	else if (showLeilao)
+	{
+		<ShowStandLeilaoComponent idFeira="@idFeira" idStand="@idStand"/>
 	}
 	else
 	{	
@@ -65,6 +71,7 @@
 	private int avaliacao = -1;
 	private bool showAvaliacao = false;
 	private bool showStand = false;
+	private bool showLeilao = false;
 	private int idStand = 0;
 	private Dictionary<string, string> nomes = new Dictionary<string, string>();
 	private Table<Stand> tabelContent;
@@ -104,6 +111,7 @@
 			idStand = s.IdStand;
 			showStand = true;
 			showAvaliacao = false;
+			showLeilao = false;
 		}
 		else
 		{
@@ -116,6 +124,11 @@
 		if (tabelContent.IdValid())
 		{
 			erro = 0;
+			Stand s = tabelContent.GetElement();
+			idStand = s.IdStand;
+			showStand = false;
+			showAvaliacao = false;
+			showLeilao = true;
 		}
 		else
 		{
@@ -130,6 +143,7 @@
 	{
 		showStand = false;
 		showAvaliacao = false;
+		showLeilao = false;
 		tabelContent.Unselect();
 		StateHasChanged();
 	}
