--- a/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLogin/LoginComponent.razor
+++ b/FeirasEspinhoBlazorApp/FeirasEspinhoBlazorApp/Pages/PagesLogin/LoginComponent.razor
@@ -76,32 +76,29 @@ else
 		}
 		else 
 		{
-			loginSucess = true;
-			Utilizador user = new Cliente("abc", "abc", "abc", DateTime.Now, DateTime.Now, new List<string>());
-			NavBar.GetInstance().LoginCL(email);
-			NavMenu.GetInstance().lista = NavBar.GetInstance().GetMenu((int)NavBar.menusNomes.Cliente);
-			NavMenu.GetInstance().show = true;
-			NavMenu.GetInstance().Refresh();
-			/*
-			SistemaFeiras sistemaFeiras = new SistemaFeiras();
-				try
-				{
+			SistemaFeiras sistemaFeiras = SistemaFeiras.GetInstance();
+			try
+			{
 				int existe = sistemaFeiras.Login(email, password);
-						switch (existe)
-						{
-						case 0:
+				switch (existe)
+				{
+					case 0:
+						NavBar.GetInstance().LoginCL(email);
 						NavMenu.GetInstance().lista = NavBar.GetInstance().GetMenu((int)NavBar.menusNomes.Cliente);
 						break;
-						case 1:
+					case 1:
 						NavMenu.GetInstance().lista = NavBar.GetInstance().GetMenu((int)NavBar.menusNomes.Admin);
 						break;
-						case 2:
+					case 2:
 						NavMenu.GetInstance().lista = NavBar.GetInstance().GetMenu((int)NavBar.menusNomes.Feirante);
-			break;
-			}
+						break;
+				}
+				loginSucess = true;
+				NavMenu.GetInstance().show = true;
+				NavMenu.GetInstance().Refresh();
 			}
 			catch (Exception e)
-				{
+			{
 				this.erro = 3;
 				codigosErro[3] = e.Message;
 			}
